# trading-experiments

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/: ant_problem.ipynb  optiver_ant_problem.ipynb  sr_lines_indicator.ipynb
