[tool.poetry]
name = "trading-experiments"
version = "0.1.0"
description = "Trading Experiments"
authors = ["Mahdi Sadeghi <mahdi74sadeghi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyterlab = "^4.0.7"
pandas = "^2.1.2"
numpy = "^1.26.1"
ipykernel = "^6.26.0"
yfinance = "^0.2.31"
ta = "^0.10.2"
pydantic = "^2.4.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
